fmt; fixed "both sharing the same" (double pleonasm); translations need to be checked <kim#36428>

--- a/wiki/kim.wikitext
+++ b/wiki/kim.wikitext
@@ -1,35 +1,64 @@
-===Given Name===
-Kim, male name as in Kim from Kiplings book of the same name. 
+==English==
+===Etymology===
+Literal translation from [[Old Norse]] as Son of God, or Son of Chief, the meanings having same translation; both obviously male in form.
 
-Literal translation from the Old norse as Son of God, or Son of Chief, both meanings sharing same translation; again both obviously male in form.
-
-
-
-Also a reference as a second name from Confusionism of China. 
-
-
-===Given name===
+===Proper noun===
 '''Kim'''
-# A feminine name, a short form of [[Kimberly]].
+
+#A male [[given name]].
+#A female given name, a short form of [[Kimberly]].
+#A surname very common in [[Korea]].
 
 ====Translations====
-*[[Bulgarian]]: [[Ким]]
-*[[Dutch]]: kim
-*[[Vietnamese]]: Kim (often used with a second first name)
 
-===Surname===
-#A famous [[Korea]]n surname, ranked the #1 surname in [[Korea]] with about 30% of Korea.
+'''male given name'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''female given name'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: Kim
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
+*Bulgarian: [[Ким]]
+*Vietnamese: Kim (often used with a second first name)
 
 ----
 ==Dutch==
 ===Noun===
 '''kim''' (plural: [[kimmen]], diminutive: [[kimmetje]])
 
-# [[horizon]]
+#[[horizon]]
 
 ====Synonyms====
-horizon
+*[[horizon#Dutch|horizon]]
 
-===Given name===
+===Proper noun===
 '''Kim'''
-# A feminine name, a short form of [[Kimberly]].
+
+#Kim (''female given name'')
