--- a/wiki/atheist.wikitext
+++ b/wiki/atheist.wikitext
@@ -5,7 +5,8 @@
 ===Noun===
 '''atheist''' (''plural'' '''atheists''')
 
-# A person who lacks belief in any [[god]], or in some cases in any specific [[god]]
+
+# A person who does not have a [[belief]] that one or more [[deity]] exists.
 
 ====Translations====
 {| border=0  width=100%
@@ -29,6 +30,8 @@
 *[[pantheist]]
 *[[polytheist]]
 *[[theist]]
+*[[belief]]
+*[[deity]]
 
 ===See also===
 *[[agnostic]]
