+ second def. <contractor#54217>

--- a/wiki/contractor.wikitext
+++ b/wiki/contractor.wikitext
@@ -2,7 +2,8 @@
 
 '''contractor''' 
 
-# a person who executes the building or improving of buildings 
+# A person who executes the building or improving of buildings. 
+# A person or company that performs specific tasks like electrical or plumbing work in construction projects.
 
 ====Translations==== 
 
