+ third def. <contractor#54217>

--- a/wiki/contractor.wikitext
+++ b/wiki/contractor.wikitext
@@ -4,6 +4,7 @@
 
 # A person who executes the building or improving of buildings. 
 # A person or company that performs specific tasks like electrical or plumbing work in construction projects.
+# A person or company hired to maintain existing facilities like air conditioning systems, groundskeeping, etc.
 
 ====Translations==== 
 
