--- a/wiki/faith.wikitext
+++ b/wiki/faith.wikitext
@@ -5,6 +5,8 @@ From Middle English '''[[feith]]''', from Old French '''[[feid]]''', from Latin 
 ===Noun===
 '''faith''' (''[[uncountable]] except as indicated''; ''plural'' '''[[faiths]]''')
 
+#Mental acceptance of and confidence in a claim as [[truth]] without [[evidence]] supporting the claim, and often in spite of [[evidence]] to the contrary.
+#:"I have faith that, as the bible says, the Earth is flat, despite evidence that it is rounded."
 #(''Christian theology'') Belief and [[trust]] in God's promises revealed through [[Christ]] and the [[Scriptures]].  
 #:''"Faith is the assured expectation of things hoped for, the evident demonstration of realities though not beheld."'' (Hebrews 11:1)
 #A [[feeling]] or [[belief]], not dependent on [[evidence]], that something is [[true]], [[real]], or will [[happen]].
