/* NOTE */ <scientific method#64515>

--- a/wiki/scientific_method.wikitext
+++ b/wiki/scientific_method.wikitext
@@ -3,6 +3,4 @@
 
 #The strict method by which a scientific [[experiment]] is carried out in order to discover empirical [[truth]].
 
-===NOTE===
-
-Document created by LaughingMan. Additions welcome. LaughingMan will make additions soon!
+<!-- created by LaughingMan -->
