--- a/wiki/tridymite.wikitext
+++ b/wiki/tridymite.wikitext
@@ -2,6 +2,11 @@
 ===Pronunciation===
 
 :trid' ih mite
+
+===Etymology===
+
+:The name refers to the peculiar habit of crystallizing in groups of three individuals.
+
 ===Noun===
 
 #A rare [[mineral]] of [[volcanic]] [[rock]]s that solidified at a high temperature. Tridymite is chemically identical to quartz, but has a different [[crystal]] structure. Sometimes contains sodium aluminum silicate, which seems to be expelled when quartz solidifies at lower temperatures. 
