<新年明けましておめでとうございます#64530>

--- a/wiki/%E6%96%B0%E5%B9%B4%E6%98%8E%E3%81%91%E3%81%BE%E3%81%97%E3%81%A6%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
+++ b/wiki/%E6%96%B0%E5%B9%B4%E6%98%8E%E3%81%91%E3%81%BE%E3%81%97%E3%81%A6%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
@@ -1,7 +1,7 @@
 {{-ja-}}
 {{-phrase-}}
 '''新年明けましておめでとうございます''' (しんねんあけましておめでとうございます, ''shinnen akemashite omedetō gozaimasu'')
-# (NB the Japanese phrase cannot be used before the new year has begun)
+#Happy New Year! (NB the Japanese phrase cannot be used before the new year has begun)
 {{-syn-}}
 [[明けましておめでとうございます]], [[新年おめでとうございます]], [[謹賀新年]]
 {{-rel-}}
