--- a/wiki/%E6%96%B0%E5%B9%B4%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
+++ b/wiki/%E6%96%B0%E5%B9%B4%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
@@ -10,3 +10,4 @@
 Muira, Akira: ''Japanese words & their uses''. Charles E. tuttle Company, 1990. ISBN 0-8048-1639-5
 {{-cf-}}
 [[w:en:Japanese_New_Year| Japanese New Year]]
+[[nl:新年おめでとうございます]]
