It's Dutch, more commonly used in Flanders <babbelen#53122>

--- a/wiki/babbelen.wikitext
+++ b/wiki/babbelen.wikitext
@@ -1,1 +1,11 @@
-praten, kletsen
+==Dutch==
+===Verb===
+'''babbelen'''
+
+# to [[chatter]], to [[chit-chat]], to talk casually
+
+====Synonyms====
+[[praten]], [[kletsen]]
+
+====False friends====
+to [[babble]]
