--- a/wiki/screw.wikitext
+++ b/wiki/screw.wikitext
@@ -14,6 +14,7 @@
 *French: [[vis]] ''f'' (1)
 *German: [[Schraube]] ''f'' (1,2)
 *Italian: [[vite]] ''f'' (1)
+*Portuguese: [[parafuso]] ''m'' (1)
 *Romanian: [[şurub]] ''n'' (1)
 *Spanish: [[tornillo]] ''m'' (1)
 
