--- a/wiki/truth.wikitext
+++ b/wiki/truth.wikitext
@@ -1,9 +1,8 @@
 ===Noun===
 '''truth'''
 
-#that which is accepted by a general consensus to be valid
-#the product of [[belief]]
-#the condition that makes rational sense within a given interperetation
+#That which is true.
+#That which is accepted by a general consensus to be true.
 
 ====Antonyms====
 [[lie]], [[untruth]], [[nonsense]], [[falsehood]]
