--- a/wiki/truth.wikitext
+++ b/wiki/truth.wikitext
@@ -3,6 +3,7 @@
 
 #That which is true.
 #That which is accepted by a general consensus to be true.
+#That which conforms to reality.
 
 ====Antonyms====
 [[lie]], [[untruth]], [[nonsense]], [[falsehood]]
