--- a/wiki/evolution.wikitext
+++ b/wiki/evolution.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Noun===
 '''Evolution'''
-# The process of evolving
+#The process of evolving
+#''Biology'' - Change in the genetic composition of a population during successive generations as a result of natural selection.
+
 ===Related Terms===
 [[Evolve]]
