--- a/wiki/evolution.wikitext
+++ b/wiki/evolution.wikitext
@@ -3,6 +3,7 @@
 '''Evolution'''
 #The process of evolving
 #''Biology'' - Change in the genetic composition of a population during successive generations as a result of natural selection.
+#''Mathematics'' - The extraction of a root of a quantity.
 
 ===Related Terms===
 [[Evolve]]
