--- a/wiki/onanism.wikitext
+++ b/wiki/onanism.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Noun===
 '''onanism'''
-#Self-pollution; [[masturbation]].
+#[[masturbation]].
+#:''In the Book of Genesis of [[Biblical mythology]], [[Onan]] - a mythological character - was commanded by his father to impregnate the widow of his slain brother and to raise the offspring of the union. In order to avoid raising descendants for his late brother, however, [[Onan]] engaged in [[masturbation]].
