/* Proper noun */ <Allah#37048>

--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -5,7 +5,7 @@ Arabic [[الله]] (allāh), from [[ال-‏]] (al-) "the" + [[اله|إِله]
 ===Proper noun===
 '''Allah'''
 
-# Arabic word for [[God]], often used in the context of [[Islam]].
+#The name of the Arabic diety of the [[Muslim]] [[monotheistic]] [[religion]], [[Islam]].
 
 ====Translations====
 *Arabic: [[الله]] (ʾAllāh)
