--- a/wiki/atheism.wikitext
+++ b/wiki/atheism.wikitext
@@ -5,7 +5,8 @@
 ===Noun===
 '''atheism'''
 
-#the lack of belief in any god or gods.
+#the lack of belief in any deity.
+#The claim that no deity exists.
 #the antonym of theism (belief in a god or gods).
 
 ====Related terms====
