--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -17,7 +17,7 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 
 ===Noun===
 '''marriage'''
-# A permanent, legally binding heterosexual union.
+# A permanent, legally binding union.
 # A permanent, publicly committed union between two people.
 # A joining of two parts.
 
