--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -18,6 +18,7 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 ===Noun===
 '''marriage'''
 # A permanent, legally binding union.
+#: ''The legal restrictions of a marriage union differ depending on the governing bodies restrictions.''
 # A permanent, publicly committed union between two people.
 # A joining of two parts.
 
