--- a/wiki/lambda_expression.wikitext
+++ b/wiki/lambda_expression.wikitext
@@ -9,6 +9,7 @@
 
 <table border="1">
 <tr><th>Expression</th><th>Meaning</th></tr>
+<tr><td><math>\lambda x.1</math></td><td>The constant value 1</td></tr>
 <tr><td><math>\lambda x.x</math></td><td>The [[identity]]</td></tr>
 <tr><td><math>\lambda x.x+1</math></td><td><math>f(x)=x+1</math></td></tr>
 <tr><td><math>\lambda n.\lambda x.x+n</math></td><td><math>f(n) = g</math> where <math>g(x) = x+n</math></td></tr>
