--- a/wiki/cursed.wikitext
+++ b/wiki/cursed.wikitext
@@ -1,7 +1,15 @@
 ==English==
 
+===Hyphenation===
+:curs&middot;ed
+:cursed
+
 ===Adjective===
-#Something that has some sort of [[divine]] harm, malady, or other [[curse]].
+'''cursed'''
+
+# Something that has some sort of [[divine]] harm, malady, or other [[curse]].
+
+Also [[curst]].
 
 ===Antonym===
 *[[blessed]]
