--- a/wiki/birthday.wikitext
+++ b/wiki/birthday.wikitext
@@ -2,8 +2,8 @@
 ===Noun===
 '''birthday'''
 
-#the [[anniversary]] of the day on which someone is born or something is created
-#the date on which someone is born or something is created
+# The [[anniversary]] of the day on which someone is born or something is created.
+# The date on which someone is born or something is created. (Informally writ [[birth day]]; commonly called [[birthdate]]).
 
 ====Translations====
 *Bulgarian (Български): [[рожден ден]]
