--- a/wiki/Arwel.wikitext
+++ b/wiki/Arwel.wikitext
@@ -1,1 +1,13 @@
-Arwel -- prominent (Welsh)
+==Welsh==
+
+<!-- ===Pronunciation===
+*[[w:AHD|AHD]]: 
+*[[w:IPA|IPA]]: 
+*[[w:SAMPA|SAMPA]]: -->
+
+===Etymology===
+
+:From Welsh: "prominent", derivation uncertain.
+
+===Proper noun===
+# a man's name
