--- a/wiki/aphelion.wikitext
+++ b/wiki/aphelion.wikitext
@@ -1,1 +1,10 @@
-aphelion
+==English==
+
+===Noun===
+'''aphelion'''
+
+# The point in a planetary orbit furthest from the sun.
+
+===Related terms===
+*[[apogee]]
+*[[perihelion]]
