--- a/wiki/Robert.wikitext
+++ b/wiki/Robert.wikitext
@@ -5,7 +5,7 @@
 ===Proper noun===
 '''Robert'''
 
-# A male [[given name]]. (Short: [[Rob]]; Diminutive: [[Robbie]] or [[Robby]])
+# A male [[given name]]. (Short: [[Rob]], [[Bob]]; Diminutive: [[Robbie]], [[Robby]], or [[Bobby]])
 
 ====Variants====
 *French: [[Robert]] ''m''
@@ -13,3 +13,4 @@
 *Italian: [[Roberto]] ''m'', [[Roberta]] ''f''
 *Japanese: [[ロバート]] (robāto), [[ロベルト]] (roberuto), [[ロベルタ]] (roberuta)
 *Spanish: [[Roberto]] ''m'', [[Roberta]] ''f''
+*Polish:[[Robert]] ''m'' (with full conjugation in all noun cases: Roberta, Robertowi, Robertu)
