/* Noun */ +sports sense (defn could be better) <turnover#36505>

--- a/wiki/turnover.wikitext
+++ b/wiki/turnover.wikitext
@@ -1,11 +1,12 @@
 === Noun ===
 '''turnover''' (plural: [[turnovers]])
 
-# the rate of [[change]] or [[replacement]]
+# The rate of [[change]] or [[replacement]]
 #: ''Those apartments have a high turnover because they are so close to the railroad tracks.''
 #: ''The company has a 50% turnover rate.''
-# a [[pastry]] consisting of pastry or pie crust around sweet, often fruit filling
+# A [[pastry]] consisting of pastry or pie crust around sweet, often fruit filling
 #: ''They served apple turnovers for breakfast.''
+# (''sports'') A loss of posession of the ball without scoring.
 
 ====Related terms====
 *[[popover]]
