/* Noun */ +ex (sports) <turnover#36505>

--- a/wiki/turnover.wikitext
+++ b/wiki/turnover.wikitext
@@ -7,6 +7,7 @@
 # A [[pastry]] consisting of pastry or pie crust around sweet, often fruit filling
 #: ''They served apple turnovers for breakfast.''
 # (''sports'') A loss of posession of the ball without scoring.
+#: ''The Nimrods committed a dismaying 23 turnovers en route to another humiliating loss.''
 
 ====Related terms====
 *[[popover]]
