added POS <FOLDOC#36502>

--- a/wiki/FOLDOC.wikitext
+++ b/wiki/FOLDOC.wikitext
@@ -1,3 +1,6 @@
+
+===Proper noun==
+
 The Free On-line Dictionary of Computing by Denis Howe
 
 FOLDOC is a searchable dictionary of acronyms, jargon, programming languages, tools, architecture, operating systems, networking, theory, conventions, standards, mathematics, telecoms, electronics, institutions, companies, projects, products, history, in fact anything to do with computing.
