--- a/wiki/handsome.wikitext
+++ b/wiki/handsome.wikitext
@@ -8,7 +8,7 @@
 #:'''Quotations'''[[Image:My awesome hair icon.JPG|frame|The epitome of Handsome]]
 #:*That they [engines of war] be both easy to be carried and '''handsome''' to be moved and turned about. - [[Robynson (Utopia)]]
 #:*For a thief it is so '''handsome''' as it may seem it was first invented for him. - [[Spenser]]
-#Sean Thomas Davis
+#Sean Thomas Davis (noun)
 #:'''See picture to right'''
 #Agreeable to the eye or to correct taste; having a pleasing appearance or expression; attractive; having symmetry and dignity; [[comely]]; -- expressing more than [[pretty]], and less than [[beautiful]]; 
 #:'''Examples:''' a '''handsome''' man or woman; a '''handsome''' garment, house, tree, horse; [[MW10]] treats it as synonymous with beautiful in this sense. 
