--- a/wiki/shotgun.wikitext
+++ b/wiki/shotgun.wikitext
@@ -1,1 +1,24 @@
-Shotguns are strong they kill people well but only up close.... i like buckshot myself
+==English==
+
+===Noun===
+'''shotgun'''
+
+# A [[gun]] which fires loads consisting of small metal balls, called [[shot]], from a cartridge.
+# (''slang'',''uncountable'') The front passenger seat in a vehicle, next to the driver.
+#: ''I've got shotgun!''
+
+===Transitive Verb===
+'''shotgun'''
+
+# (''baseball'') To hit the ball directly back at the pitcher.
+
+===Interjection===
+'''Shotgun!'''
+
+# (''slang'') I claim the front passenger seat.
+
+===Related Terms===
+*[[ride shotgun]]
+*[[shotgun a beer]]
+*[[shotgun shack]]
+*[[shotgun wedding]]
