/* multilingual links */ <stupid#54273>

--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -23,4 +23,4 @@
 
 ==multilingual links==
 *[[Russian]]: stupid [[не]] /ne/ уступит /ustupit/ (will not [[concede]])
-Malay: bodoh
+*[[Malay]]: bodoh
