add stub <zoophilic#1804154>

--- a/wiki/zoophilic.wikitext
+++ b/wiki/zoophilic.wikitext
@@ -1,3 +1,5 @@
 Zoophilic means liking or prefering animals. 
 
 Zoophilic organisms are found primarily in animals and cause marked inflammatory reactions in humans who have contact with infected cats, dogs, cattle, horses, birds, or other animals. This is followed by a rapid termination of the infection.
+
+{{stub}}
