--- a/wiki/offense.wikitext
+++ b/wiki/offense.wikitext
@@ -7,3 +7,4 @@
 #The act of offending in any sense; esp., a crime or a sin, an affront or an injury.
 #The state of being offended or displeased; anger; displeasure.
 #A cause or occasion of stumbling or of sin.
+# (''team sports'') A strategy employed when a team is in a position to score.
