+rel, +see <offense#50768>

--- a/wiki/offense.wikitext
+++ b/wiki/offense.wikitext
@@ -6,5 +6,13 @@
 '''offense''' (''plural'' '''offenses''')
 #The act of offending in any sense; esp., a crime or a sin, an affront or an injury.
 #The state of being offended or displeased; anger; displeasure.
-#A cause or occasion of stumbling or of sin.
 # (''team sports'') A strategy employed when a team is in a position to score.
+
+===Related Terms===
+*[[offend]]
+*[[offensive]]
+
+===See Also===
+*[[crime]]
+*[[defense]]
+*[[sin]]
