--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -18,6 +18,7 @@
 *Japanese: [[馬鹿]] (ばか), [[間抜け]] ([[まぬけ]]), [[馬鹿げた]] ([[ばかげた]]), [[愚か]]な
 *Korean: [[어리석은]]
 *Latin: [[stupidus]] ''m'', [[stupida]] ''f'', [[stupidum]] ''n''
+*Malay: [[bodoh]]
 *Russian: [[глупый]]; [[тупоумный]] ''m'', [[тупоумная]] ''f'', [[тупоумное]] ''n'', [[тупоумные]] ''pl''
 *Spanish: [[estúpido]] ''m'', [[estúpida]] ''f''
 
