/* Noun Phrase */ better ex <buzzword compliance#64565>

--- a/wiki/buzzword_compliance.wikitext
+++ b/wiki/buzzword_compliance.wikitext
@@ -7,7 +7,7 @@ Ironic parallel of [[standards compliance]].
 '''buzzword compliance'''
 
 # (''software engineering'') The practice of ensuring that a product supports a set of features considered important for marketing, regarless of whether they add any value.
-#: ''There's a lot of hype out here, and we're going to lose a lot of time on buzzword compliance.''
+#: ''The UDDI over bluetooth support is only in there for buzzword compliance.''
 
 ===Related Terms===
 *[[buzzword]]
