--- a/wiki/state_machine.wikitext
+++ b/wiki/state_machine.wikitext
@@ -4,4 +4,4 @@
 '''state machine'''
 
 # (''computing'') A formalism for describing computation, consisting of a set of [[state]]s and a [[transition function]] describing when to move from one state to another.
-# ''This algorithm will produce a state machine for parsing a given context-free grammar.''
+#: ''This algorithm will produce a state machine for parsing a given context-free grammar.''
