--- a/wiki/state_machine.wikitext
+++ b/wiki/state_machine.wikitext
@@ -5,3 +5,13 @@
 
 # (''computing'') A formalism for describing computation, consisting of a set of [[state]]s and a [[transition function]] describing when to move from one state to another.
 #: ''This algorithm will produce a state machine for parsing a given context-free grammar.''
+
+===Related Terms===
+*[[machine]]
+*[[state]]
+
+===See Also===
+*[[automaton]]
+*[[finite-state automaton]]
+*[[finite-state machine]]
+*[[turing machine]]
