(Anyone heard this outside the UK?) Fmt, -promo links <dubplate#64580>

--- a/wiki/dubplate.wikitext
+++ b/wiki/dubplate.wikitext
@@ -1,6 +1,10 @@
-Dubplate - A new tune that has been pressed to vinyl or acetate in very limited numbers
+==English==
 
-see www.dubplate.net
-    www.ukgrime.com
+===Etymology===
+Compound of [[dub]] (music sense) and [[plate]] (slang for vinyl record)
 
-; "You heard that new Danny Weed dubplate?"
+===Noun===
+'''dubplate'''
+
+# A new tune that has been pressed to vinyl or acetate in very limited numbers.
+#: ''You heard that new Danny Weed dubplate?''
