fmt, bowdlerized -- Any gueses on regionality, etymology? <nang#64579>

--- a/wiki/nang.wikitext
+++ b/wiki/nang.wikitext
@@ -1,5 +1,6 @@
-Nang - Slang originating from ***********
+==English==
 
-means something is good, likable - 
+===Adjective===
 
-"This new dubplate is fucking nang!"
+# (''slang'') Good, likable.
+#: ''This new dubplate is totally nang!''
