--- a/wiki/zonked.wikitext
+++ b/wiki/zonked.wikitext
@@ -4,4 +4,10 @@
 '''zonked'''
 
 # (''colloquial'') Extremely mentally fatigued.
+#: ''After eighteen hours of proofreading, I was completely zonked.''
 # (''colloquial'') Deeply asleep.
+#: ''I must have been really zonked.  They said it took fifteen minutes to wake me up.''
+
+===Releated Terms===
+*[[zonk]]
+*[[zonk out]]
