--- a/wiki/topo.wikitext
+++ b/wiki/topo.wikitext
@@ -1,3 +1,6 @@
+==English==
+===Noun===
+A pencil and paper game of drawing and scoring curves.
 ==Italian==
 ===Noun===
 '''topo''' ''m'' (diminutive: [[topolino]])
