Changed to singular <MILF#63889>

--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -5,4 +5,4 @@
 ===Abbreviation===
 '''MILF'''
 
-#(''slang'') [[Mom]]s I'd like to [[fuck]].<!--plural or singular?-->
+#(''slang'') [[Mom]] I'd like to [[fuck]].<!--plural or singular?-->
