--- a/wiki/glaive.wikitext
+++ b/wiki/glaive.wikitext
@@ -1,5 +1,11 @@
 ==English==
-===Noun===
+==Noun==
+
+==Etymology==
+From Latin [[gladius]] : sword
+
+----
+
 '''glaive''' (''plural'' glaives)
 #(''Weapon'') [[Category:Weapon]] A [[weapon]] formerly used, consisting of a [[large]] [[blade]] [[fix]]ed on the end of a [[pole]], whose [[edge]] was on the [[outside]] [[curve]].
 #:'''Quotations'''
