--- a/wiki/glaive.wikitext
+++ b/wiki/glaive.wikitext
@@ -14,5 +14,9 @@ From Latin [[gladius]] : sword
 #(''Weapon'') A [[sword]]; used [[poetically]] and [[loosely]].
 #:''The glaive which he did wield.'' Spenser.
 
-===Translations===
+==Translations==
+
+*[[French]] : [[glaive]] ''m''
+*[[German]] : [[Schwert]] ''n''
+*[[Spanish]] : [[espada]] ''f''
 *Lithuanian: [[gleivas]] ''m''
