--- a/wiki/glaive.wikitext
+++ b/wiki/glaive.wikitext
@@ -17,6 +17,6 @@ From Latin [[gladius]] : sword
 ==Translations==
 
 *[[French]] : [[glaive]] ''m''
-*[[German]] : [[Schwert]] ''n'' [[Lanze]] ''f''
-*[[Spanish]] : [[espada]] ''f''
+*[[German]] : [[Schwert]] ''n'' , [[Lanze]] ''f''
+*[[Spanish]] : [[espada]] ''f'' , [[lanza]] ''f''
 *Lithuanian: [[gleivas]] ''m''
