--- a/wiki/gladiator.wikitext
+++ b/wiki/gladiator.wikitext
@@ -16,7 +16,7 @@ From Latin [[gladius]] : sword
 
 ==Translations==
 
-*[[French]] : ''Definition'' 1.  [[gladiateur]] ''m''  /''Definition'' 2.  [[belluaire]] ''m'' 
+*[[French]] : ''Definition'' 1.  [[gladiateur]] ''m'' ,   ''Definition'' 2.  [[belluaire]] ''m'' 
 *[[German]] : [[Gladiator]] ''m''
 *[[Italian]] : [[gladiatore]] ''m''
-*[[Spanish]] :'' Definition'' 1. [[gladiador]] m  /''Definition'' 2. [[bestiario]] ''m''
+*[[Spanish]] :'' Definition'' 1. [[gladiador]] m  ,   ''Definition'' 2. [[bestiario]] ''m''
