+fi <man-to-man defense#64575>

--- a/wiki/man-to-man_defense.wikitext
+++ b/wiki/man-to-man_defense.wikitext
@@ -6,5 +6,20 @@
 # (''basketball'') A defense in which each player guards a particular opposing player.
 #: ''They'll have trouble playing a man-to-man against such a fast guard and tall center.''
 
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[miespuolustus]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
 ===See Also===
 *[[zone defense]]
