--- a/wiki/gladiator.wikitext
+++ b/wiki/gladiator.wikitext
@@ -10,9 +10,8 @@ From Latin [[gladius]] : sword
 ==Definition==
 
 '''gladiator'''
-*1. A combatant who fought against another '''man''' in a Roman amphitheater.
-*2. A combatant who fought against '''wild beasts''' in a Roman amphitheater.
-
+*1. A [[combatant]] who fought against another '''man''' in a Roman amphitheater.
+*2. A [[combatant]] who fought against '''wild beasts''' in a Roman amphitheater.
 
 ==Translations==
 
