--- a/wiki/QED.wikitext
+++ b/wiki/QED.wikitext
@@ -1,7 +1,35 @@
-== [[Abbreviation]] ==
+===Abbreviation===
 #Quod erat demonstrandum (Latin ''what had to be proved'' or ''what was to be demonstrated'').
 #Quantum Electrodynamics
 
-===[[Translation]]s===
-*[[French]]: [[C.Q.F.D.]] (''ce qu'il fallait démontrer'') (1)
-*[[German]]: [[W.z.b.w.]] (''was zu beweisen war'') (1)
+====Translations====
+'''Quod erat demonstrandum'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[MOT]] (''mikä oli todistettava'')
+*French: [[C.Q.F.D.]] (''ce qu'il fallait démontrer'')
+*German: [[W.z.b.w.]] (''was zu beweisen war'')
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''quantum electrodynamics'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
