--- a/wiki/buzz.wikitext
+++ b/wiki/buzz.wikitext
@@ -1,7 +1,5 @@
 ==English==
-
 ===Noun===
-
 '''buzz'''
 
 #A continuous, humming noise, as of bees; a confused murmur, as of general conversation in low tones, or of a general expression of surprise or approbation.
@@ -9,11 +7,13 @@
 #The audible friction of voice consonants.
 
 ===Verb===
-
-'''to buzz'''
+'''to buzz''' ([[buzzes]], [[buzzed]], [[buzzing]])
 
 #To make a low, continuous, humming or sibilant sound, like that made by bees with their wings. Hence: To utter a murmuring sound; to speak with a low, humming voice.
 #To sound forth by buzzing.
 #To whisper; to communicate, as tales, in an under tone; to spread, as report, by whispers, or secretly.
 #To talk to incessantly or confidentially in a low humming voice.
 #To sound with a "buzz".
+
+===Derived terms===
+*[[buzzword]]
