+fi <garbage collector#64581>

--- a/wiki/garbage_collector.wikitext
+++ b/wiki/garbage_collector.wikitext
@@ -1,11 +1,26 @@
 ==English==
 
-===Verb Phrase===
+===Noun===
 '''garbage collector'''
 
 # (''computing'') An algorithm, procedure or thread dedicated to reclaiming resources which are no longer in use.
 
-===Related Terms===
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[roskienkerääjä]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+====Related Terms====
 *[[collector]]
 *[[garbage]]
 *[[garbage collect]]
