+fi <state machine#64572>

--- a/wiki/state_machine.wikitext
+++ b/wiki/state_machine.wikitext
@@ -6,6 +6,21 @@
 # (''computing'') A formalism for describing computation, consisting of a set of [[state]]s and a [[transition function]] describing when to move from one state to another.
 #: ''This algorithm will produce a state machine for parsing a given context-free grammar.''
 
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[tilakone]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
 ===Related Terms===
 *[[machine]]
 *[[state]]
