--- a/wiki/transition_function.wikitext
+++ b/wiki/transition_function.wikitext
@@ -5,6 +5,21 @@
 
 # (''computing'') A [[function]] from (state, input symbol) to state describing what state to move to on reciving a given input in a given state.
 
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[siirtymäfunktio]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
 ===Related Terms===
 *[[function]]
 *[[transition]]
