+fi, formatting <garbage#53730>

--- a/wiki/garbage.wikitext
+++ b/wiki/garbage.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Noun===
 '''garbage''' (''uncountable'')
+#{{substub}}
 
 ====Synonyms====
 *[[junk]]
@@ -17,17 +18,30 @@
 *[[garbologist]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[垃圾]]
 *Dutch: [[huisvuil]] ''n''
+*{{fi}}: [[roskat]], [[jätteet]], [[jäte]]
 *French: [[ordures]] ''plural''
 *German: [[Abfall]] ''m''
 *Greek: [[απορρίματα]] ''plural''
 *Italian: [[immondizia]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[廃物]]
 *Korean: [[쓰레기]]
 *Portuguese: [[lixo]] ''m''
 *Russian: [[отброс]] ''m'' (otbros)
 *Spanish: [[basura]] ''f''
+|}
+|}
 
 ===See also===
 *[[w:Garbage|Wikipedia article on garbage]]
