+compar & superl (as confirmed by Internet searches) <nang#64579>

--- a/wiki/nang.wikitext
+++ b/wiki/nang.wikitext
@@ -1,6 +1,6 @@
 ==English==
-
 ===Adjective===
+'''nang''' (''[[comparative]]'' '''nanger''', ''[[superlative]]'' '''nangest''')
 
-# (''slang'') Good, likable.
+# (''slang'') Very good.
 #: ''This new dubplate is totally nang!''
