hyphenated (unhyphenated form now links here); +adj, pl, etym <mezzo-soprano#64570>

--- a/wiki/mezzo-soprano.wikitext
+++ b/wiki/mezzo-soprano.wikitext
@@ -1,14 +1,22 @@
 ==English==
+===Etymology===
+Italian, from ''[[mezzo]]'', half, and ''[[soprano]]'', soprano
 
-===Noun Phrase===
-'''mezzo soprano'''
+===Noun===
+'''mezzo-soprano''' (''plural'' '''mezzo-sopranos''')
 
-# A female vocal range intermediate between [[alto]] and [[soprano]].
-# A singer with a mezzo soprano range.
+#A female vocal range intermediate between [[alto]] and [[soprano]].
+#A singer having this vocal range.
 
-===Related Terms===
+===Adjective===
+'''mezzo-soprano''' (''no [[comparative]] or [[superlative]]'')
+
+#Of a mezzo-soprano.
+#:''mezzo-soprano range''
+
+===Related terms===
 *[[soprano]]
 
-===See Also===
+===See also===
 *[[alto]]
 *[[contralto]]
