--- a/wiki/sabotage.wikitext
+++ b/wiki/sabotage.wikitext
@@ -11,6 +11,7 @@
 *[[terrorism]]
 
 ====Translations====
+*Catalan: [[sabotatge]]
 *Chinese: [[阴谋破坏]]
 *Ekspreso: [[sabotaje]]
 *Interlingua: [[sabotage]]
