+translation tables, fr: & it:; modified self-referential def ("might" means "would") <would#3721>

--- a/wiki/would.wikitext
+++ b/wiki/would.wikitext
@@ -1,32 +1,133 @@
-=== Auxiliary verb ===
+==English==
+=== Homophones ===
+*[[wood]]
 
+=== Auxiliary verb ===
 '''would'''
 
-#an action that might have happened if something else had happened first. 
+#Indicating in action or state that is conditional on another.
 #:''We would be warmer if you hadn't opened the window!'' 
-#an action that might happen later. 
+#:''Bill said he would go if it didn't rain.''
+#Indicating a possible (but not definite) future action or state.
 #:''We sat on the bench, wondering if the bus would be on late this time.''
-#an action that was planned or intended. 
+#Indicating an action in the past that was planned or intended.
 #:''The waiter said he would be right back.'' 
-# a conditional action
-#: ''Bill said he would go if it didn't rain.''
-#an action that happened repeatedly or commonly. 
-#:''In the winters we would sit by the hole on the frozen lake and fish for hours.'' 
-#expressing a polite request. 
+#Indicating an action in the past that happened repeatedly or commonly. 
+#:''In the winters, we would sit by the hole on the frozen lake and fish for hours.''
+#Used to express a polite request.
 #:''Would you please turn off the TV?'' 
 
-====Usage Notes====
+====Usage notes====
 '''Would''' is used with the infinitive of verbs, without ''to'':
-: "John said he would have fish for dinner."
+:"John said he would have fish for dinner."
 
 Historically, '''would''' is the past tense of '''[[will]]'''.
 
-=== Homophones ===
+====Translations====
 
-*[[wood]]
+*''Note: many languages express some meanings of '''would''' using a [[mood]] or [[tense]] rather than by a particular word.''
 
-=== Translations ===
-*[[Dutch]]: [[zouden]]
+'''indicating in action or state that is conditional on another'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: ''Use the conditional tense''
+**''We would be warmer if you hadn't opened the window!'' - Nous serons plus chauds si vous n'avez pas ouvert la fenêtre!
+*Italian: ''Use the conditional tense''
+**''We would be warmer if you hadn't opened the window!'' - Saremmo più caldi se non aveste aperto la finestra!
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
-===Related Terms===
+'''indicating a possible (but not definite) future action or state'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: ''Use the conditional tense''
+**''We sat on the bench, wondering if the bus would be on late this time.'' - Nous nous sommes assis sur le banc, nous demandons si l'autobus serait en retard cette fois.
+*Italian: ''Use the conditional tense''
+*French: ''Use the conditional tense''
+**''We sat on the bench, wondering if the bus would be on late this time.'' - Ci siamo seduti sul banco, domandandoci se il bus sarebbe in ritardo questa volta.
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''indicating an action in the past that was planned or intended'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: ''Use the conditional tense''
+**''The waiter said he would be right back.'' - Le garçon a dit qu'il retournerait tout de suite.
+*Italian: ''Use the conditional tense''
+**''The waiter said he would be right back.'' - Il cameriere ha detto che ritornerebbe subito. 
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''indicating an action in the past that happened repeatedly or commonly'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: ''Use the imperfect tense''
+**''In the winters, we would sit by the hole on the frozen lake and fish for hours.'' - En hiver, nous nous asseyions à côté du trou sur le lac gelé et nous péchions pendant des heures.
+*Italian: ''Use the imperfect tense''
+**''In the winters, we would sit by the hole on the frozen lake and fish for hours.'' - Durante l'inverno, ci sedevamo presso al buco sul lago gelato e prendevamo pesci da ori.
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''used to express a polite request'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[vouloir]], [[veuiller]] (''formal'')
+**''Would you please turn off the TV?'' - Tu veux éteindre la télé, s'il te plaît? ''or'' Veuillez éteindre la télévision, s'il vous plaît?
+*Italian: [[volere]]
+**''Would you please turn off the TV?'' - Vuoi spegnere la tivù, per favore?
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.
+
+*Dutch: [[zouden]]
+
+===Related terms===
 *[[will]]
+
+===See also===
+*[[could]]
+*[[should]]
