--- a/wiki/whole_chebang.wikitext
+++ b/wiki/whole_chebang.wikitext
@@ -1,4 +1,4 @@
-In [[computing]], a '''shebang''' is command that makes a [[Unix-like]] [[operating system]] execute the commands in a [[text file]] using an [[interpreter (computer software)|interpreter]]. A shebang consists of a sharp symbol and exclamation point character '''#!''' in the first two columns of the first line, followed by the program that will provide the interpretation. 
+In [[computing]], a '''shebang''' is command that makes a [[Unix-like]] [[operating system]] execute the commands in a [[text file]] using an [[interpreter (computer software)|interpreter]]. A shebang consists of a sharp symbol and exclamation point character '''#!''' in the first two columns of the first line, followed by the [[Path (computing)|path]] to the [[computer program|program]] that will provide the interpretation. 
 
 The name shebang comes from the contraction of ''sharp bang'', or ''hash bang'', referring to the two characters.  Unix jargon uses ''bang'' to refer to the [[exclamation point]] character and "hash" to refer to the [[octothorpe]].
 
