--- a/wiki/fop.wikitext
+++ b/wiki/fop.wikitext
@@ -1,8 +1,11 @@
+==English==
 ===Noun===
 '''fop''' (plural: [[fops]])
 
 ====Synonyms====
 *[[dandy]]
+*[[dude]], [[dood]]
+*[[masher]]
 
 ====Related terms====
 *[[foppish]]
