syns++; add stub messages - no defs here yet <dandy#39854>

--- a/wiki/dandy.wikitext
+++ b/wiki/dandy.wikitext
@@ -1,8 +1,15 @@
+==English==
 ===Adjective===
 '''dandy''' ([[dandier]], [[dandiest]])
+
+# {{substub}}
 
 ===Noun===
 '''dandy''' (plural: [[dandies]])
 
+# {{substub}}
+
 ====Synonyms====
+*[[dude]], [[dood]]
 *[[fop]]
+*[[masher]]
