/* Synonyms */ syns for #3 <dude#48786>

--- a/wiki/dude.wikitext
+++ b/wiki/dude.wikitext
@@ -10,9 +10,11 @@
 #:''Relax, dude.''
 #(''archaic'') [[dandy]], a man who is very concerned about his dress and appearance
 
-===Synonyms===
+====Synonyms====
 *1: [[guy]], [[bloke]] (''Australian'')
 *2: [[mate]] (''Australian'')
+*3: [[dandy]], [[fop]], [[masher]]
+
 ===Derived Terms===
 *[[dude ranch]] 
 ===Translations===
