fix pron section; +alt spell <dude#48786>

--- a/wiki/dude.wikitext
+++ b/wiki/dude.wikitext
@@ -1,21 +1,26 @@
 =={{en}}==
 [[Category:English slang]]
 ===Pronunciation===
-*/do͞od/
-*[dyːd]
+*do͞od, /duːd/, /<tt>du:d</tt>
+
 ===Noun===
 '''dude''' (''Plural:'' [[dudes]])
+
 #(''slang'') a man, [[guy]]
 #(''slang; interjection'') a term of address for a man
 #:''Relax, dude.''
 #(''archaic'') [[dandy]], a man who is very concerned about his dress and appearance
+
+====Alternative spellings====
+*3: [[dood]]
 
 ====Synonyms====
 *1: [[guy]], [[bloke]] (''Australian'')
 *2: [[mate]] (''Australian'')
 *3: [[dandy]], [[fop]], [[masher]]
 
-===Derived Terms===
+====Derived Terms====
 *[[dude ranch]] 
-===Translations===
+
+====Translations====
 *{{fi}}: [[keikari]]
