/* Pronunciation */ missing / <dude#48786>

--- a/wiki/dude.wikitext
+++ b/wiki/dude.wikitext
@@ -1,7 +1,7 @@
 =={{en}}==
 [[Category:English slang]]
 ===Pronunciation===
-*do͞od, /duːd/, /<tt>du:d</tt>
+*do͞od, /duːd/, /<tt>du:d</tt>/
 
 ===Noun===
 '''dude''' (''Plural:'' [[dudes]])
