changed to imperative <veuillez#64603>

--- a/wiki/veuillez.wikitext
+++ b/wiki/veuillez.wikitext
@@ -1,6 +1,6 @@
 ==French==
-===Intransitive verb===
-'''veuiller'''
+===Imperative===
+'''veuillez'''
 
-#(''formal'') [[please]], [[would]] (''used to make polite requests''), [[be so kind as to]]
+#(''formal [[imperative]] of'' '''[[vouloir]]''') [[please]], [[would]] (''used to make polite requests''), [[be so kind as to]], ''etc''
 #:''Veuillez patienter, s'il vous plaît.'' - Please wait ''or'' Would you wait, please ''or'' Be so kind as to wait, please.
