corrected non-existent "veuiller" to "veuillez" <would#3721>

--- a/wiki/would.wikitext
+++ b/wiki/would.wikitext
@@ -106,10 +106,10 @@ Historically, '''would''' is the past tense of '''[[will]]'''.
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*French: [[vouloir]], [[veuiller]] (''formal'')
-**''Would you please turn off the TV?'' - Tu veux éteindre la télé, s'il te plaît? ''or'' Veuillez éteindre la télévision, s'il vous plaît?
+*French: [[vouloir]], [[veuillez]] (''imperative'')
+**''Would you please turn off the TV?'' - Tu veux éteindre la télé, s'il te plaît? (''informal''); Voulez-vous éteindre la télévision, s'il vous plaît? (''formal''); Veuillez éteindre la télévision, s'il vous plaît? (''formal'')
 *Italian: [[volere]]
-**''Would you please turn off the TV?'' - Vuoi spegnere la tivù, per favore?
+**''Would you please turn off the TV?'' - Vuoi spegnere la tivù, per favore? (''infomal''); Volete spegnere la televisione, per favore? (''formal'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
