"on late" -> "late" <would#3721>

--- a/wiki/would.wikitext
+++ b/wiki/would.wikitext
@@ -9,7 +9,7 @@
 #:''We would be warmer if you hadn't opened the window!'' 
 #:''Bill said he would go if it didn't rain.''
 #Indicating a possible (but not definite) future action or state.
-#:''We sat on the bench, wondering if the bus would be on late this time.''
+#:''We sat on the bench, wondering if the bus would be late this time.''
 #Indicating an action in the past that was planned or intended.
 #:''The waiter said he would be right back.'' 
 #Indicating an action in the past that happened repeatedly or commonly. 
@@ -52,10 +52,10 @@ Historically, '''would''' is the past tense of '''[[will]]'''.
 {|
 <!--Put translations for languages from A to I here-->
 *French: ''Use the conditional tense''
-**''We sat on the bench, wondering if the bus would be on late this time.'' - Nous nous sommes assis sur le banc, nous demandons si l'autobus serait en retard cette fois.
+**''We sat on the bench, wondering if the bus would be late this time.'' - Nous nous sommes assis sur le banc, nous demandons si l'autobus serait en retard cette fois.
 *Italian: ''Use the conditional tense''
 *French: ''Use the conditional tense''
-**''We sat on the bench, wondering if the bus would be on late this time.'' - Ci siamo seduti sul banco, domandandoci se il bus sarebbe in ritardo questa volta.
+**''We sat on the bench, wondering if the bus would be late this time.'' - Ci siamo seduti sul banco, domandandoci se il bus sarebbe in ritardo questa volta.
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
