<明けましておめでとうございます#64528>

--- a/wiki/%E6%98%8E%E3%81%91%E3%81%BE%E3%81%97%E3%81%A6%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
+++ b/wiki/%E6%98%8E%E3%81%91%E3%81%BE%E3%81%97%E3%81%A6%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%E3%81%94%E3%81%96%E3%81%84%E3%81%BE%E3%81%99.wikitext
@@ -9,6 +9,6 @@
 [[良いお年をお迎え下さい]]
 {{-ref-}}
 Muira, Akira: ''Japanese words & their uses''. Charles E. tuttle Company, 1990. ISBN 0-8048-1639-5
-{{-cf-}}
+{{-seealso-}}
 [[w:en:Japanese_New_Year| Japanese New Year]]
 [[nl:明けましておめでとうございます]]
