amended incorrect defs; separated vt and vi and added more senses; translation tables (many translations need to be checked); replaced (un)related terms; commented out disputed n: "food being cooked" <cook#7875>

--- a/wiki/cook.wikitext
+++ b/wiki/cook.wikitext
@@ -1,12 +1,91 @@
-=== Verb ===
-'''to cook'''
+==English==
+===Transitive verb===
+'''to cook''' ('''cooking''', '''cooked''', '''cooked''')
 
-# to [[boil]]
-# The act of preparing [[food]]
+#To preparing ([[food]]) for eating by heating it, often by combining it with other [[ingredients]].
 
 ==== Translations ====
+
+'''prepare (food) for eating'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[cuire]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Intransitive verb===
+'''to cook''' ('''cooking''', '''cooked''', '''cooked''')
+
+#Of a person, to prepare food for eating by heating it, often by combining it with other [[ingredients]].
+#:''He's in the kitchen, cooking.''
+#Of food, to become ready for eating by the application of heat.
+#:''The dinner is cooking on the stove.''
+#(''colloquial'') To be uncomfortably hot.
+#:''Look at that poor dog shut up in that car on a day like today - it must be cooking in there.''
+
+====Synonyms====
+*(''be uncomfortably hot''): [[bake]], [[boil]], [[roast]]
+
+==== Translations ====
+
+'''prepare food'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[cuisiner]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''become reading for eating'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[cuire]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''colloquial: be uncomfortably hot'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The translation might be for the transitive or the intransitive verb, or for both.  The numbering is unreliable.
+
 *Dutch: [[koken]] (1,2)
-*French: [[bouillir]] (1), [[cuisiner]] (2)
 *Finnish: [[keittää]] (1), [[kypsentää]] (2), [[laittaa ruokaa]] (2)
 *Indonesian: [[masak|memasak]]
 *Japanese: [[料理]]する ([[りょうり]]する, ryōri-suru)
@@ -14,18 +93,16 @@
 ===Noun===
 '''cook'''
 
-# A person who prepares food for a living
-# The [[food]] being heated in an [[oven]], on a [[stove]] etc. <?-- really? -->
+#A person who prepares food for a living.
+<!-- disputed and unconfirmed: #[[Food]] being cooked.-->
 
 ==== Translations ====
 *Dutch: [[kok]] ''m'' (1), [[kokkin]] ''f'' (2)
 *Finnish: [[kokki]]
 
-===Related words===
-*[[stove]]
-*[[energy]]
-*[[staple]]
-*[[water]]
-*[[oil]]
-*[[salt]]
-*[[pepper]]
+====Derived terms====
+*[[cookbook]]
+*[[cookery]]
+*[[cooking]]<!--noun-->
+*[[cook the books]]
+*[[cook up]]
