--- a/wiki/cook.wikitext
+++ b/wiki/cook.wikitext
@@ -13,6 +13,7 @@
 {|
 <!--Put translations for languages from A to I here-->
 *French: [[cuire]]
+*Italian: [[cuocere]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -43,6 +44,7 @@
 {|
 <!--Put translations for languages from A to I here-->
 *French: [[cuisiner]]
+*Italian: [[cucinare]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -58,6 +60,7 @@
 {|
 <!--Put translations for languages from A to I here-->
 *French: [[cuire]]
+*Italian: [[cuocere]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
