--- a/wiki/cook.wikitext
+++ b/wiki/cook.wikitext
@@ -86,7 +86,7 @@
 =====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 
-The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The translation might be for the transitive or the intransitive verb, or for both.  The numbering is unreliable.
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The translations might be for the transitive or the intransitive verb, or for both.  The numbering is unreliable.
 
 *Dutch: [[koken]] (1,2)
 *Finnish: [[keittää]] (1), [[kypsentää]] (2), [[laittaa ruokaa]] (2)
