/* Pronunciation */ - corrected <look#5673>

--- a/wiki/look.wikitext
+++ b/wiki/look.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /luk/
-*[[w:IPA|IPA]]: /luk/
+*[[IPA]]: /lʊk/
+*[[SAMPA]]: /lUk/
 
 ===Verb===
 
